--- a/src/pages/docs/text-transform.mdx
+++ b/src/pages/docs/text-transform.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/textTransform'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -67,19 +66,13 @@ Use the `capitalize` utility to capitalize text.
 
 To control the text transformation of an element at a specific breakpoint, add a `{screen}:` prefix to any existing text transformation utility. For example, use `md:uppercase` to apply the `uppercase` utility at only medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<p class="capitalize **md:uppercase** ...">
+  The quick brown fox jumped over the lazy dog.
+</p>
+```
 
-<ResponsiveCodeSample
-  classNames={['uppercase', 'lowercase', 'capitalize', 'normal-case', 'uppercase']}
-  snippet={(classNames) => `
-    <p class="${classNames} ...">
-      The quick brown fox jumped over the lazy dog.
-    </p>
-  `}
-  preview={(className) => (
-    <p className={`text-lg text-gray-800 ${className}`}>The quick brown fox jumped over the lazy dog.</p>
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ## Customizing
 
