--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -6,7 +6,6 @@ description: "Utilities for controlling the space between child elements."
 import plugin from 'tailwindcss/lib/plugins/space'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = {
   plugin,
@@ -83,26 +82,15 @@ If your elements are in reverse order (using say `flex-row-reverse` or `flex-col
 
 To control the space between elements at a specific breakpoint, add a `{screen}:` prefix to any existing space utility. For example, adding the class `md:space-x-8` to an element would apply the `space-x-8` utility at medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<div class="flex space-x-2 **md:space-x-8**">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+</div>
+```
 
-<ResponsiveCodeSample
-  classNames={['space-x-2', 'space-x-4', 'space-x-6', 'space-x-8', 'space-x-12']}
-  snippet={(classNames) => `
-    <div class="flex ${classNames}">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div>
-  `}
-  previewClassName="text-center p-4"
-  preview={(className) => (
-    <div className={`flex bg-gray-200 ${className}`}>
-      <div className="text-gray-700 text-center bg-gray-400 px-4 py-2">1</div>
-      <div className="text-gray-700 text-center bg-gray-400 px-4 py-2">2</div>
-      <div className="text-gray-700 text-center bg-gray-400 px-4 py-2">3</div>
-    </div>
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ---
 
