--- a/src/pages/docs/translate.mdx
+++ b/src/pages/docs/translate.mdx
@@ -6,7 +6,6 @@ description: "Utilities for translating elements with transform."
 import plugin from 'tailwindcss/lib/plugins/translate'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -32,18 +31,11 @@ Note that because Tailwind implements transforms using [CSS custom properties](h
 
 To control the translation of an element at a specific breakpoint, add a `{screen}:` prefix to any existing translate utility. For example, use `md:translate-x-8` to apply the `translate-x-8` utility at only medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<img class="transform translate-x-2 **md:translate-x-8** ...">
+```
 
-<ResponsiveCodeSample
-  classNames={['translate-y-6', '-translate-y-6', 'translate-y-2', '-translate-y-8', 'translate-y-0']}
-  snippet={(classNames) => `
-    <img class="transform ${classNames}...">
-  `}
-  previewClassName="flex justify-center items-center px-4 py-12"
-  preview={(className) => (
-    <img className={`h-16 w-16 rounded transform ${className}`} src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" />
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ## Customizing
 
