--- a/src/pages/docs/visibility.mdx
+++ b/src/pages/docs/visibility.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/visibility'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -55,25 +54,11 @@ Use `invisible` to hide an element, but still maintain its place in the DOM, aff
 
 To apply a visibility utility only at a specific breakpoint, add a `{screen}:` prefix to the existing class name. For example, adding the class `md:invisible` to an element would apply the `invisible` utility at medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<div class="visible **md:invisible** ..."></div>
+```
 
-<ResponsiveCodeSample
-  classNames={['visible', 'invisible', 'visible', 'invisible', 'visible']}
-  snippet={(classNames) => `
-    <div class="flex justify-center">
-      <div class="bg-gray-400"></div>
-      <div class="bg-gray-600 ${classNames}"></div>
-      <div class="bg-gray-400"></div>
-    </div>
-  `}
-  preview={(className) => (
-    <div className="flex justify-center">
-      <div className="bg-gray-400 w-32 h-12" />
-      <div className={`bg-gray-600 w-32 h-12 ${className}`} />
-      <div className="bg-gray-400 w-32 h-12" />
-    </div>
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ## Customizing
 
