--- a/src/pages/docs/width.mdx
+++ b/src/pages/docs/width.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/width'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -184,23 +183,13 @@ Use `w-{fraction}` or `.w-full` to set an element to a percentage based width.
 
 To control the width of an element at a specific breakpoint, add a `{screen}:` prefix to any existing width utility. For example, adding the class `md:w-full` to an element would apply the `w-full` utility at medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<div class="w-1/2 **md:w-full** ...">
+  <!-- ... -->
+</div>
+```
 
-<ResponsiveCodeSample
-  classNames={['w-1/2', 'w-auto', 'w-full', 'w-32', 'w-3/4']}
-  snippet={(classNames) => `
-    <div class="bg-gray-400 p-4 text-center">
-      <div class="${classNames} ...">
-        Responsive Element
-      </div>
-    </div>
-  `}
-  preview={(className) => (
-    <div className="bg-gray-400 p-4 text-center">
-      <div className={`inline-block bg-gray-800 text-white p-2 truncate ${className}`}>Responsive Element</div>
-    </div>
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ## Customizing
 
