--- a/src/pages/docs/word-break.mdx
+++ b/src/pages/docs/word-break.mdx
@@ -6,7 +6,6 @@ description: "Utilities for controlling word breaks in an element."
 import plugin from 'tailwindcss/lib/plugins/wordBreak'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -56,21 +55,13 @@ Use `break-all` to add line breaks whenever necessary, without trying to preserv
 
 To control the word breaks in an element only at a specific breakpoint, add a `{screen}:` prefix to any existing word break utility. For example, adding the class `md:break-all` to an element would apply the `break-all` utility at medium screen sizes and above.
 
-For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
+```html
+<p class="break-normal **md:break-all** ...">
+  <!-- ... -->
+</p>
+```
 
-<ResponsiveCodeSample
-  classNames={['break-normal', 'break-words', 'break-all', 'break-normal']}
-  snippet={(classNames) => `
-    <p class="${classNames} ...">
-      ...
-    </p>
-  `}
-  preview={(className) => (
-    <p className={`max-w-xs p-2 bg-gray-200 mx-auto ${className}`}>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
-    </p>
-  )}
-/>
+For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
 ## Customizing
 
