font-family examples

--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -18,15 +18,15 @@ export const classes = { plugin }
 
 Use `font-sans` to apply a web safe sans-serif font family:
 
-```html
+```html lightBlue
 <template preview>
-  <p class="font-system text-lg text-gray-800 text-center">
-    I'm a sans-serif paragraph.
+  <p class="font-sans text-xl text-light-blue-600 text-center md:text-2xl">
+    The quick brown fox jumps over the lazy dog.
   </p>
 </template>
 
-<p class="font-sans text-lg text-gray-800 text-center">
-  I'm a sans-serif paragraph.
+<p class="**font-sans** ...">
+  The quick brown fox jumps over the lazy dog.
 </p>
 ```
 
@@ -34,24 +34,32 @@ Use `font-sans` to apply a web safe sans-serif font family:
 
 Use `font-serif` to apply a web safe serif font family:
 
-```html
+```html emerald
 <template preview>
-  <p class="font-serif text-lg text-gray-800 text-center">
-    I'm a serif paragraph.
+  <p class="font-serif text-xl text-emerald-600 text-center md:text-2xl">
+    The quick brown fox jumps over the lazy dog.
   </p>
 </template>
+
+<p class="**font-serif** ...">
+  The quick brown fox jumps over the lazy dog.
+</p>
 ```
 
 ## Monospaced
 
 Use `font-mono` to apply a web safe monospaced font family:
 
-```html
+```html indigo
 <template preview>
-  <p class="font-mono text-lg text-gray-800 text-center">
-    I'm a monospaced paragraph.
+  <p class="font-mono text-xl text-indigo-600 text-center md:text-2xl">
+    The quick brown fox jumps over the lazy dog.
   </p>
 </template>
+
+<p class="**font-mono** ...">
+  The quick brown fox jumps over the lazy dog.
+</p>
 ```
 
 ## Responsive
