--- a/src/pages/docs/font-size.mdx
+++ b/src/pages/docs/font-size.mdx
@@ -19,50 +19,62 @@ export const classes = { plugin }
 
 Control the font size of an element using the `text-{size}` utilities.
 
-```html
+```html purple
 <template preview>
-  <div class="space-y-6">
-    <div>
-      <p class="text-sm text-gray-600">.text-xs</p>
-      <p class="text-xs truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+  <dl class="text-violet-600">
+    <div class="flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-3">xs</dt>
+      <dd class="text-xs font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-sm</p>
-      <p class="text-sm truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-6 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-4">sm</dt>
+      <dd class="text-sm font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-base</p>
-      <p class="text-base truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-6 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-5">base</dt>
+      <dd class="text-base font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-lg</p>
-      <p class="text-lg truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-6 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-6">lg</dt>
+      <dd class="text-lg font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-xl</p>
-      <p class="text-xl truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-6 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-6">xl</dt>
+      <dd class="text-xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-2xl</p>
-      <p class="text-2xl truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-8 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-6">2xl</dt>
+      <dd class="text-2xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-3xl</p>
-      <p class="text-3xl truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-10 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-6">3xl</dt>
+      <dd class="text-3xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-4xl</p>
-      <p class="text-4xl truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-10 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-6">4xl</dt>
+      <dd class="text-4xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-5xl</p>
-      <p class="text-5xl truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-12 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-7">5xl</dt>
+      <dd class="text-5xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-    <div>
-      <p class="text-sm text-gray-600">.text-6xl</p>
-      <p class="text-6xl truncate text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+    <div class="mt-12 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-8">6xl</dt>
+      <dd class="text-6xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
     </div>
-  </div>
+    <div class="mt-14 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-10">7xl</dt>
+      <dd class="text-7xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
+    </div>
+    <div class="mt-16 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-10">8xl</dt>
+      <dd class="text-8xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
+    </div>
+    <div class="mt-20 flex items-start">
+      <dt class="w-16 flex-shrink-0 text-sm text-violet-600 text-opacity-50 font-mono leading-10">9xl</dt>
+      <dd class="text-9xl font-medium">The quick brown fox jumped over the lazy dog.</dd>
+    </div>
+  </dl> 
 </template>
 
 <p class="text-xs ...">The quick brown fox ...</p>
@@ -75,6 +87,9 @@ Control the font size of an element using the `text-{size}` utilities.
 <p class="text-4xl ...">The quick brown fox ...</p>
 <p class="text-5xl ...">The quick brown fox ...</p>
 <p class="text-6xl ...">The quick brown fox ...</p>
+<p class="text-7xl ...">The quick brown fox ...</p>
+<p class="text-8xl ...">The quick brown fox ...</p>
+<p class="text-9xl ...">The quick brown fox ...</p>
 ```
 
 ## Responsive
