font-weight examples

--- a/src/pages/docs/font-size.mdx
+++ b/src/pages/docs/font-size.mdx
@@ -77,19 +77,19 @@ Control the font size of an element using the `text-{size}` utilities.
   </dl> 
 </template>
 
-<p class="text-xs ...">The quick brown fox ...</p>
-<p class="text-sm ...">The quick brown fox ...</p>
-<p class="text-base ...">The quick brown fox ...</p>
-<p class="text-lg ...">The quick brown fox ...</p>
-<p class="text-xl ...">The quick brown fox ...</p>
-<p class="text-2xl ...">The quick brown fox ...</p>
-<p class="text-3xl ...">The quick brown fox ...</p>
-<p class="text-4xl ...">The quick brown fox ...</p>
-<p class="text-5xl ...">The quick brown fox ...</p>
-<p class="text-6xl ...">The quick brown fox ...</p>
-<p class="text-7xl ...">The quick brown fox ...</p>
-<p class="text-8xl ...">The quick brown fox ...</p>
-<p class="text-9xl ...">The quick brown fox ...</p>
+<p class="**text-xs** ...">The quick brown fox ...</p>
+<p class="**text-sm** ...">The quick brown fox ...</p>
+<p class="**text-base** ...">The quick brown fox ...</p>
+<p class="**text-lg** ...">The quick brown fox ...</p>
+<p class="**text-xl** ...">The quick brown fox ...</p>
+<p class="**text-2xl** ...">The quick brown fox ...</p>
+<p class="**text-3xl** ...">The quick brown fox ...</p>
+<p class="**text-4xl** ...">The quick brown fox ...</p>
+<p class="**text-5xl** ...">The quick brown fox ...</p>
+<p class="**text-6xl** ...">The quick brown fox ...</p>
+<p class="**text-7xl** ...">The quick brown fox ...</p>
+<p class="**text-8xl** ...">The quick brown fox ...</p>
+<p class="**text-9xl** ...">The quick brown fox ...</p>
 ```
 
 ## Responsive
