--- a/src/pages/docs/font-style.mdx
+++ b/src/pages/docs/font-style.mdx
@@ -23,7 +23,7 @@ Use the `italic` utility to make text italic.
   <p class="italic text-xl text-emerald-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="italic ...">The quick brown fox ...</p>
+<p class="**italic** ...">The quick brown fox ...</p>
 ```
 
 ## Undo Italics
@@ -35,7 +35,7 @@ Use the `not-italic` utility to display text normally. This is typically used to
   <p class="not-italic text-xl text-amber-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="not-italic ...">The quick brown fox ...</p>
+<p class="**not-italic** ...">The quick brown fox ...</p>
 ```
 
 ## Responsive
